# elgamal

./: Cargo.toml  README.md
src/: ciphertext.rs  enc.rs  key.rs  lib.rs
