[package]
name = "elgamal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bbs = { git = "https://github.com/jesusdiazvico/bbs" }
bls12_381 = { version = "0.8.0", features = ["experimental"] }
ff = { version = "0.13", default-features = false }
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
rand_chacha = "0.3.1"
rand_core = "0.6"